--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,4 @@ app.jwt.secret=clave_super_super_segura_con_mas_de_32_bytes_123!
 # 1 día en milisegundos
 app.jwt.expiration=86400000
 
+spring.classformat.ignore=true
